fix anonumous register

--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,24 @@
                     </ul>
                 </form>
             </section>
+            <section class="modal-body-mobile">
+            <form id="modal-form" class="form-content" method="POST">
+                    <ol>
+                        <li><label>Name: </label>
+                            <input id="name_modal" type="text" />
+                        </li>
+                        <li>
+                            <label for="email">Email: </label>
+                            <input id="email" type="email" />
+                        </li>
+                    </ol>
+                    <ul>
+                        <li><button class="modal-close-button" onclick="Babble.modalFunctionAnon()">Be Anonymous</button></li>
+                        <li><input type="submit" class="modal-register-button"></input>
+                        </li>
+                    </ul>
+                </form>
+            </section>
         </div>
     </section>
     <script src="scripts/main.js" type="text/javascript"></script>
@@ -80,6 +98,6 @@
 
 </html>
 
-<!-- check git clone commit etc !-->
+<!-- check git clone commit etc  !-->
 
 <!-- another comment !-->
