--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
 
         <section class="write-msg-area">
             <form id="message-form" action="http://localhost:8080/messages" method="POST">
-                <textarea onkeyup="Babble.auto_grow(this)" id="msg-to-send" class="ta" name="message"></textarea>
+                <textarea  id="msg-to-send" class="ta" name="message"></textarea>
                 <!--<button class="sendbtn" submit='' onclick="newMSG()">-->
                 <button class="sendbtn"><input type="image" class="send-img" src="images/send.png" alt="submit form"></button></form>
 
