--- a/client/index.html
+++ b/client/index.html
@@ -25,8 +25,8 @@
             <h2>Vegan</h2>
             <aside class="header-aside">
                 <dl>
+                        <dt><img src="images/chat.svg" alt=""></img> <span id="newMSG"></span></dt>
                     <dt><img src="images/person.svg" alt=""></img><span id="connected"></span></dt>
-                    <dt><img src="images/chat.svg" alt=""></img> <span id="newMSG"></span></dt>
                     <!--<dd>This is a chatroom that focuses Vegans. Design by Amit Berger</dd>-->
                 </dl>
             </aside>
@@ -39,7 +39,6 @@
         <section class="write-msg-area">
             <form id="message-form" action="http://localhost:8080/messages" method="POST">
                 <textarea  id="msg-to-send" class="ta" name="message"></textarea>
-                <!--<button class="sendbtn" submit='' onclick="newMSG()">-->
                 <button class="sendbtn"><input type="image" class="send-img" src="images/send.png" alt="submit form"></button></form>
 
         </section>
@@ -74,7 +73,7 @@
                 </form>
             </section>
             <section class="modal-body-mobile">
-            <form id="modal-form" class="form-content" method="POST">
+            <form id="modal-form2" class="form-content" method="POST">
                     <ol>
                         <li><label>Name: </label>
                             <input id="name_modal" type="text" />
