--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="head">
-        <img src="images/logo.png" alt=""></img>
+        <img src="images/logo.png" alt="">
     </header>
     <aside>
         <nav class="leftNav">
@@ -26,11 +26,11 @@
             <aside class="header-aside">
                 <dl>
                     <dt>
-                        <img src="images/chat.svg" alt=""></img>
+                        <img src="images/chat.svg" alt="">
                         <span id="newMSG"></span>
                     </dt>
                     <dt>
-                        <img src="images/person.svg" alt=""></img>
+                        <img src="images/person.svg" alt="">
                         <span id="connected"></span>
                     </dt>
                     <!--<dd>This is a chatroom that focuses Vegans. Design by Amit Berger</dd>-->
@@ -46,7 +46,7 @@
             <form id="message-form" action="http://localhost:8080/messages" method="POST">
                 <textarea id="msg-to-send" class="ta" name="message"></textarea>
                 <button class="sendbtn">
-                    <input type="image" class="send-img" src="images/send.png" alt="submit form">
+                    <img class="send-img" src="images/send.png" alt="submit form">
                 </button>
             </form>
 
@@ -69,10 +69,10 @@
                     </ol>
                     <ol>
                         <li>
-                            <input id="name_modal" type="text" />
+                            <input id="name_modal2" type="text" />
                         </li>
                         <li>
-                            <input id="email" type="email" />
+                            <input id="email2" type="email" />
                         </li>
                     </ol>
                     <ul>
@@ -80,7 +80,7 @@
                             <button class="modal-close-button" onclick="Babble.modalFunctionAnon()">Be Anonymous</button>
                         </li>
                         <li>
-                            <input type="submit" class="modal-register-button"></input>
+                            <input type="submit" class="modal-register-button">
                         </li>
                     </ul>
                 </form>
