update shorter js

--- a/client/index.html
+++ b/client/index.html
@@ -81,7 +81,7 @@
                             <button class="modal-close-button" onclick="Babble.modalFunctionAnon()">Be Anonymous</button>
                         </li>
                         <li>
-                            <button class="saver" type="submit" class="modal-register-button">Save</button>
+                            <button class="saver modal-register-button" type="submit" >Save</button>
                         </li>
                     </ul>
                 </form>
