--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Babble</title>
+    <title>Vegans - Babble</title>
 </head>
 
 <body>
